--- a/index.html
+++ b/index.html
@@ -1,114 +1,93 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Docplanner Group</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
     <header>
-      <img
-        src="https://www.docplanner.com/img/logo-default-group-en.svg?v=1"
-        alt="Docplanner Group"
-      />
-      <nav>
-        <a href="#">A propos de nous</a>
-        <a href="#">Carrière</a>
-        <a href="#">Départements</a>
-      </nav>
+        <img src="https://www.docplanner.com/img/logo-default-group-en.svg?v=1" alt="Docplanner Group">
+        <nav>
+            <a href="#">A propos de nous</a>
+            <a href="#">Carrière</a>
+            <a href="#">Départements</a>
+        </nav>
     </header>
 
     <section class="hero">
-      <h1>Rendre l'expérience des soins de santé plus humaine</h1>
-      <p>
-        Nous souhaitons que les patients trouvent le médecin idéal et prennent
-        rendez-vous le plus facilement possible...
-      </p>
+        <h1>Rendre l'expérience des soins de santé plus humaine</h1>
+        <p>Nous souhaitons que les patients trouvent le médecin idéal et prennent rendez-vous le plus facilement possible...</p>
     </section>
 
     <section class="cards">
-      <div class="card patients">
-        <h3>Pour les patients</h3>
-        <p>
-          Trouvez un médecin, prenez rendez-vous et résolvez tout doute lié à la
-          santé.
-        </p>
-      </div>
-      <div class="card medecins">
-        <h3>Pour les médecins</h3>
-        <p>
-          Gagnez du temps dans la gestion des visites et réduisez de moitié les
-          non-présentations.
-        </p>
-      </div>
-      <div class="card cliniques">
-        <h3>Pour les cliniques</h3>
-        <p>Offrez une expérience patient exceptionnelle dans votre clinique.</p>
-      </div>
+        <div class="card patients">
+            <h3>Pour les patients</h3>
+            <p>Trouvez un médecin, prenez rendez-vous et résolvez tout doute lié à la santé.</p>
+        </div>
+        <div class="card medecins">
+            <h3>Pour les médecins</h3>
+            <p>Gagnez du temps dans la gestion des visites et réduisez de moitié les non-présentations.</p>
+        </div>
+        <div class="card cliniques">
+            <h3>Pour les cliniques</h3>
+            <p>Offrez une expérience patient exceptionnelle dans votre clinique.</p>
+        </div>
     </section>
-
     <section class="stats">
-      <h2>La plus grande plateforme de soins de santé au monde</h2>
-      <div class="stat-grid">
-        <div class="stat-box">
-          <h3>Leader dans 13 pays</h3>
-          <p>Pologne, Brésil, Espagne...</p>
+        <h2>La plus grande plateforme de soins de santé au monde</h2>
+        <div class="stat-grid">
+            <div class="stat-box">
+                <h3>Leader dans 13 pays</h3>
+                <p>Pologne, Brésil, Espagne... </p>
+            </div>
+            <div class="stat-box">
+                <h3>22 000 000</h3>
+                <p>de rendez-vous réservés chaque mois</p>
+            </div>
+            <div class="stat-box">
+                <h3>80 000 000</h3>
+                <p>de patients visitent nos sites</p>
+            </div>
+            <div class="stat-box">
+                <h3>260 000</h3>
+                <p>médecins actifs</p>
+            </div>
         </div>
-        <div class="stat-box">
-          <h3>22 000 000</h3>
-          <p>de rendez-vous réservés chaque mois</p>
-        </div>
-        <div class="stat-box">
-          <h3>80 000 000</h3>
-          <p>de patients visitent nos sites</p>
-        </div>
-        <div class="stat-box">
-          <h3>260 000</h3>
-          <p>médecins actifs</p>
-        </div>
-      </div>
     </section>
 
     <section class="cities">
-      <h2>
-        Améliorez la vie de millions de personnes. Changez la vôtre pour
-        toujours.
-      </h2>
-      <div class="city-grid">
-        <div class="city">
-          <img
-            src="https://www.docplanner.com/images/warsaw.png"
-            alt="Varsovie"
-          />
-          <div class="city-name">Varsovie</div>
+        <h2>Améliorez la vie de millions de personnes. Changez la vôtre pour toujours.</h2>
+        <div class="city-grid">
+            <div class="city">
+                <img src="https://www.docplanner.com/images/warsaw.png" alt="Varsovie">
+                <div class="city-name">Varsovie</div>
+            </div>
+            <div class="city">
+                <img src="https://www.docplanner.com/images/barcelona.png" alt="Barcelone">
+                <div class="city-name">Barcelone</div>
+            </div>
+            <!-- Ajoutez les autres villes ici -->
+            <div class="city">
+                <img src="https://www.docplanner.com/images/rome.png" alt="rome">
+                <div class="city-name">rome</div>
+            </div>
+            <div class="city">
+                <img src="https://www.docplanner.com/images/istanbul@2x.png" alt="Istanbul">
+                <div class="city-name">Istanbul</div>
+            </div>
+            <div class="city">
+                <img src="https://www.docplanner.com/images/amsterdam@2x.png" alt="Amsterdam">
+                <div class="city-name">Amsterdam</div>
+            </div>
         </div>
-        <div class="city">
-          <img
-            src="https://www.docplanner.com/images/barcelona.png"
-            alt="Barcelone"
-          />
-          <div class="city-name">Barcelone</div>
-        </div>
-        <!-- Ajoutez les autres villes ici -->
-        <div class="city">
-          <img src="https://www.docplanner.com/images/rome.png" alt="Rome" />
-          <div class="city-name">Rome</div>
-        </div>
-        <div class="city">
-          <img
-            src="https://www.docplanner.com/images/bologna@2x.png"
-            alt="Bologna"
-          />
-          <div class="city-name">Bologna</div>
-        </div>
-      </div>
     </section>
 
     <footer>
-      <p>Cela vous intéresse ? <a href="#">Rejoignez-nous maintenant !</a></p>
+        <p>Cela vous intéresse ? <a href="#">Rejoignez-nous maintenant !</a></p>
     </footer>
 
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
